# Calco

./: README.md
scripts/: CMakeLists.txt  Makefile  build.bat  build.sh
scripts-usage/: Linux.sh  Makefile.sh  Windows.cmd
src/: calco.cpp  calco.h
